Creado mediante Colaboratory

--- a/Diplomado_Pandas.ipynb
+++ b/Diplomado_Pandas.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2925,6 +2924,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "WkYOeNJXsOSF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "import numpy as np\n",
         "filtro=df1.groupby('sexo').agg(np.mean)\n",
@@ -3078,6 +3086,213 @@
             "6   Maria    18  Programacion   6.5\n",
             "7    Luis    22  Programacion   4.0\n",
             "8  Carmen    45  Programacion   9.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df1.pivot(index='nombre', columns='asignatura',values='nota'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TFv_BJ5Vou_8",
+        "outputId": "3fb473da-5962-4afd-b3d7-4004a26dfaeb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "asignatura  Economia  Matematicas  Programacion\n",
+            "nombre                                         \n",
+            "Carmen           5.0          6.5           9.0\n",
+            "Luis             6.5          7.3           4.0\n",
+            "Maria            8.0          8.5           6.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "df1=pd.read_csv('https://raw.githubusercontent.com/asalber/manual-python/master/datos/colesteroles.csv',sep=';',decimal=',')\n",
+        "print(df1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mfqoTl_msPiS",
+        "outputId": "1b2e7db0-0b08-4583-b0a9-641363efff42"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                             nombre  edad sexo   peso  altura  colesterol\n",
+            "0      José Luis Martínez Izquierdo    18    H   85.0    1.79       182.0\n",
+            "1                    Rosa Díaz Díaz    32    M   65.0    1.73       232.0\n",
+            "2             Javier García Sánchez    24    H    NaN    1.81       191.0\n",
+            "3               Carmen López Pinzón    35    M   65.0    1.70       200.0\n",
+            "4              Marisa López Collado    46    M   51.0    1.58       148.0\n",
+            "5                 Antonio Ruiz Cruz    68    H   66.0    1.74       249.0\n",
+            "6           Antonio Fernández Ocaña    51    H   62.0    1.72       276.0\n",
+            "7             Pilar Martín González    22    M   60.0    1.66         NaN\n",
+            "8              Pedro Gálvez Tenorio    35    H   90.0    1.94       241.0\n",
+            "9           Santiago Reillo Manzano    46    H   75.0    1.85       280.0\n",
+            "10            Macarena Álvarez Luna    53    M   55.0    1.62       262.0\n",
+            "11       José María de la Guía Sanz    58    H   78.0    1.87       198.0\n",
+            "12  Miguel Angel Cuadrado Gutiérrez    27    H  109.0    1.98       210.0\n",
+            "13            Carolina Rubio Moreno    20    M   61.0    1.77       194.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df1[['nombre','altura']])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KhaVAolUsTbZ",
+        "outputId": "40bb7f87-b079-40b1-f2cd-cfd6a03cd5c3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                             nombre  altura\n",
+            "0      José Luis Martínez Izquierdo    1.79\n",
+            "1                    Rosa Díaz Díaz    1.73\n",
+            "2             Javier García Sánchez    1.81\n",
+            "3               Carmen López Pinzón    1.70\n",
+            "4              Marisa López Collado    1.58\n",
+            "5                 Antonio Ruiz Cruz    1.74\n",
+            "6           Antonio Fernández Ocaña    1.72\n",
+            "7             Pilar Martín González    1.66\n",
+            "8              Pedro Gálvez Tenorio    1.94\n",
+            "9           Santiago Reillo Manzano    1.85\n",
+            "10            Macarena Álvarez Luna    1.62\n",
+            "11       José María de la Guía Sanz    1.87\n",
+            "12  Miguel Angel Cuadrado Gutiérrez    1.98\n",
+            "13            Carolina Rubio Moreno    1.77\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df1[df1.altura>=1.80])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d1f5R96HsiPi",
+        "outputId": "ca8816fc-9e1b-4cb7-dc35-ab0140c21653"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                             nombre  edad sexo   peso  altura  colesterol\n",
+            "2             Javier García Sánchez    24    H    NaN    1.81       191.0\n",
+            "8              Pedro Gálvez Tenorio    35    H   90.0    1.94       241.0\n",
+            "9           Santiago Reillo Manzano    46    H   75.0    1.85       280.0\n",
+            "11       José María de la Guía Sanz    58    H   78.0    1.87       198.0\n",
+            "12  Miguel Angel Cuadrado Gutiérrez    27    H  109.0    1.98       210.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1.peso=50\n",
+        "print(df1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Tb0cnC2ssx3z",
+        "outputId": "7d8c2015-bfb7-411b-b23a-65b1d94238d7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                             nombre  edad sexo  peso  altura  colesterol\n",
+            "0      José Luis Martínez Izquierdo    18    H    50    1.79       182.0\n",
+            "1                    Rosa Díaz Díaz    32    M    50    1.73       232.0\n",
+            "2             Javier García Sánchez    24    H    50    1.81       191.0\n",
+            "3               Carmen López Pinzón    35    M    50    1.70       200.0\n",
+            "4              Marisa López Collado    46    M    50    1.58       148.0\n",
+            "5                 Antonio Ruiz Cruz    68    H    50    1.74       249.0\n",
+            "6           Antonio Fernández Ocaña    51    H    50    1.72       276.0\n",
+            "7             Pilar Martín González    22    M    50    1.66         NaN\n",
+            "8              Pedro Gálvez Tenorio    35    H    50    1.94       241.0\n",
+            "9           Santiago Reillo Manzano    46    H    50    1.85       280.0\n",
+            "10            Macarena Álvarez Luna    53    M    50    1.62       262.0\n",
+            "11       José María de la Guía Sanz    58    H    50    1.87       198.0\n",
+            "12  Miguel Angel Cuadrado Gutiérrez    27    H    50    1.98       210.0\n",
+            "13            Carolina Rubio Moreno    20    M    50    1.77       194.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1.sexo=range(len(df1.sexo))\n",
+        "print(df1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0wu-c1WntB5T",
+        "outputId": "8043248c-6393-4a68-eac0-3fe8667f942b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                             nombre  edad  sexo  peso  altura  colesterol\n",
+            "0      José Luis Martínez Izquierdo    18     0     0    1.79       182.0\n",
+            "1                    Rosa Díaz Díaz    32     1     1    1.73       232.0\n",
+            "2             Javier García Sánchez    24     2     2    1.81       191.0\n",
+            "3               Carmen López Pinzón    35     3     3    1.70       200.0\n",
+            "4              Marisa López Collado    46     4     4    1.58       148.0\n",
+            "5                 Antonio Ruiz Cruz    68     5     5    1.74       249.0\n",
+            "6           Antonio Fernández Ocaña    51     6     6    1.72       276.0\n",
+            "7             Pilar Martín González    22     7     7    1.66         NaN\n",
+            "8              Pedro Gálvez Tenorio    35     8     8    1.94       241.0\n",
+            "9           Santiago Reillo Manzano    46     9     9    1.85       280.0\n",
+            "10            Macarena Álvarez Luna    53    10    10    1.62       262.0\n",
+            "11       José María de la Guía Sanz    58    11    11    1.87       198.0\n",
+            "12  Miguel Angel Cuadrado Gutiérrez    27    12    12    1.98       210.0\n",
+            "13            Carolina Rubio Moreno    20    13    13    1.77       194.0\n"
           ]
         }
       ]
