Creado mediante Colaboratory

--- a/Diplomado_Pandas.ipynb
+++ b/Diplomado_Pandas.ipynb
@@ -3873,19 +3873,138 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "t1uiUJKTx0KY"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [],
       "metadata": {
         "id": "ebH041t4w0PR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "df1=pd.read_csv('https://raw.githubusercontent.com/asalber/manual-python/master/datos/colesteroles.csv', sep=';', decimal=',')\n",
+        "print(df1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t1uiUJKTx0KY",
+        "outputId": "b1596ca7-9899-4d88-cb0c-a1a90fb6abfc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                             nombre  edad sexo   peso  altura  colesterol\n",
+            "0      José Luis Martínez Izquierdo    18    H   85.0    1.79       182.0\n",
+            "1                    Rosa Díaz Díaz    32    M   65.0    1.73       232.0\n",
+            "2             Javier García Sánchez    24    H    NaN    1.81       191.0\n",
+            "3               Carmen López Pinzón    35    M   65.0    1.70       200.0\n",
+            "4              Marisa López Collado    46    M   51.0    1.58       148.0\n",
+            "5                 Antonio Ruiz Cruz    68    H   66.0    1.74       249.0\n",
+            "6           Antonio Fernández Ocaña    51    H   62.0    1.72       276.0\n",
+            "7             Pilar Martín González    22    M   60.0    1.66         NaN\n",
+            "8              Pedro Gálvez Tenorio    35    H   90.0    1.94       241.0\n",
+            "9           Santiago Reillo Manzano    46    H   75.0    1.85       280.0\n",
+            "10            Macarena Álvarez Luna    53    M   55.0    1.62       262.0\n",
+            "11       José María de la Guía Sanz    58    H   78.0    1.87       198.0\n",
+            "12  Miguel Angel Cuadrado Gutiérrez    27    H  109.0    1.98       210.0\n",
+            "13            Carolina Rubio Moreno    20    M   61.0    1.77       194.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "serie=(df1['altura']*100)\n",
+        "print(serie)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NbL-VBpG17gs",
+        "outputId": "5778bb1a-0a2b-484e-9c25-a0c40b0e7dc8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0     179.0\n",
+            "1     173.0\n",
+            "2     181.0\n",
+            "3     170.0\n",
+            "4     158.0\n",
+            "5     174.0\n",
+            "6     172.0\n",
+            "7     166.0\n",
+            "8     194.0\n",
+            "9     185.0\n",
+            "10    162.0\n",
+            "11    187.0\n",
+            "12    198.0\n",
+            "13    177.0\n",
+            "Name: altura, dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1['altura']=pd.Series(serie)\n",
+        "print(df1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XaMp9_s92KkB",
+        "outputId": "ef48d6df-8a27-4f24-828f-3b4914cf491b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                             nombre  edad sexo   peso  altura  colesterol\n",
+            "0      José Luis Martínez Izquierdo    18    H   85.0   179.0       182.0\n",
+            "1                    Rosa Díaz Díaz    32    M   65.0   173.0       232.0\n",
+            "2             Javier García Sánchez    24    H    NaN   181.0       191.0\n",
+            "3               Carmen López Pinzón    35    M   65.0   170.0       200.0\n",
+            "4              Marisa López Collado    46    M   51.0   158.0       148.0\n",
+            "5                 Antonio Ruiz Cruz    68    H   66.0   174.0       249.0\n",
+            "6           Antonio Fernández Ocaña    51    H   62.0   172.0       276.0\n",
+            "7             Pilar Martín González    22    M   60.0   166.0         NaN\n",
+            "8              Pedro Gálvez Tenorio    35    H   90.0   194.0       241.0\n",
+            "9           Santiago Reillo Manzano    46    H   75.0   185.0       280.0\n",
+            "10            Macarena Álvarez Luna    53    M   55.0   162.0       262.0\n",
+            "11       José María de la Guía Sanz    58    H   78.0   187.0       198.0\n",
+            "12  Miguel Angel Cuadrado Gutiérrez    27    H  109.0   198.0       210.0\n",
+            "13            Carolina Rubio Moreno    20    M   61.0   177.0       194.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Al dataframe colesterol van agregar un campo que se denomine IMC = peso/(altura*altura), campo Estado\n",
+        "\n",
+        "IMC<=20 --> \"Delgado\" IMC>20 y IMC <=25 --> \"Normal\" IMC>25 --> \"Sobrepeso\"\n",
+        "\n",
+        "Lo convierten a un archivo de Excel."
+      ],
+      "metadata": {
+        "id": "brsD0Tw22j7Q"
       }
     }
   ]
