Creado mediante Colaboratory

--- a/Diplomado_Scraping.ipynb
+++ b/Diplomado_Scraping.ipynb
@@ -1248,7 +1248,7 @@
         "price=\"\"\n",
         "nroFila=0\n",
         "for fila in tabla.find_all(\"tr\"):  # <td class=\"DifFlSb\" align=\"left\">IBEX 35&#174;</td><td>7.916,80</td><td>8.033,10</td><td ...\n",
-        "  if nroFila==1:\n",
+        "  if nroFila==5:\n",
         "    nro_Celda=0\n",
         "    for celda in fila.find_all(\"td\"):\n",
         "      if nro_Celda==0:\n",
@@ -1256,7 +1256,7 @@
         "        print(\"Indice :\", name)\n",
         "      if nro_Celda==6:\n",
         "        fecha=celda.text\n",
-        "        print(\"Valor :\",fecha)\n",
+        "        print(\"Fecha :\",fecha)\n",
         "      nro_Celda=nro_Celda+1\n",
         "  nroFila=nroFila+1\n",
         "\n"
@@ -1266,7 +1266,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u4tzAqH8T2p0",
-        "outputId": "65fd1f82-d233-485d-9bcb-dc091b7a16cf"
+        "outputId": "d1d2c703-3112-433e-e7f4-74fe78888062"
       },
       "execution_count": null,
       "outputs": [
@@ -1274,11 +1274,60 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Indice : IBEX 35®\n",
-            "Valor : 09/09/2022\n"
+            "Indice : IBEX 35® Bancos\n",
+            "Fecha : 09/09/2022\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('bolsa_valores.csv','a') as csv_file:\n",
+        "  writer=csv.writer(csv_file)\n",
+        "  writer.writerow([name, fecha, datetime.now()])\n"
+      ],
+      "metadata": {
+        "id": "vov6oj9nbM_R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "busqueda_div=soup.find('div', attrs={'class':'TituloPag'})\n",
+        "print(busqueda_div.text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zQclGjQXggYT",
+        "outputId": "7c696c74-6e1c-40e3-dbf7-f58a2964910a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Resumen de Índices\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url_pag='https://www.bolsamadrid.es/esp/aspx/Empresas/BusqEmpresas.aspx?busq=hola'\n",
+        "page=requests.get(url_page).text\n"
+      ],
+      "metadata": {
+        "id": "gTfyQCz9hSny"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
