Creado mediante Colaboratory

--- a/Diplomado_Scraping.ipynb
+++ b/Diplomado_Scraping.ipynb
@@ -1321,13 +1321,172 @@
       "cell_type": "code",
       "source": [
         "url_pag='https://www.bolsamadrid.es/esp/aspx/Empresas/BusqEmpresas.aspx?busq=hola'\n",
-        "page=requests.get(url_page).text\n"
+        "page=requests.get(url_page).text\n",
+        "soup=BeautifulSoup(page,\"lxml\")"
       ],
       "metadata": {
         "id": "gTfyQCz9hSny"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dato=soup.find('input',attrs={'name':'busq'}).get_text()\n",
+        "print(dato)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7q8CCKMFhyGH",
+        "outputId": "2c2627a2-e6a1-4c33-fc15-8e7ca3f269ca"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url_pag='https://www.bolsamadrid.es/esp/aspx/Empresas/BusqEmpresas.aspx?busq=dia'\n",
+        "page=requests.get(url_pag).text\n",
+        "soup=BeautifulSoup(page,\"lxml\")\n",
+        "tabla=soup.find('table',attrs={'class':'TblPort'})\n",
+        "print(tabla)"
+      ],
+      "metadata": {
+        "id": "1weqxnebjF6Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "price=\"\"\n",
+        "nroFila=0\n",
+        "for fila in tabla.find_all(\"tr\"):  \n",
+        "  if nroFila==1:\n",
+        "    nro_Celda=0\n",
+        "    for celda in fila.find_all(\"td\"):\n",
+        "      if nro_Celda==0:\n",
+        "        name=celda.text\n",
+        "        print(\"Indice :\", name)\n",
+        "        enlace=celda.find('a')\n",
+        "        print(enlace['href'])\n",
+        "      if nro_Celda==2:\n",
+        "        price=celda.text\n",
+        "        print(\"Valor :\",price)\n",
+        "      nro_Celda=nro_Celda+1\n",
+        "  nroFila=nroFila+1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "njyF197Ijs3g",
+        "outputId": "459106f0-68df-4aed-f7bd-3459fc77dcdd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Indice : ARKADIA FINANZAS, SICAV, S.A.\n",
+            "/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0175258039&ClvEmis=75258\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url_pag='https://www.bolsamadrid.es/esp/aspx/Empresas/BusqEmpresas.aspx?busq=dia'\n",
+        "page=requests.get(url_pag).text\n",
+        "soup=BeautifulSoup(page,\"lxml\")\n",
+        "tabla=soup.find('table',attrs={'class':'FrmBusq'})\n",
+        "print(tabla)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cPnV2V4xmQm7",
+        "outputId": "adfd7e15-c640-4adb-ddb5-0c8c5708e44e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<table class=\"FrmBusq\"><tr>\n",
+            "<td align=\"center\" class=\"Etiqueta\">Nombre / ISIN / Ticker de la Emisora</td>\n",
+            "<td align=\"center\" class=\"Campo\">\n",
+            "<input id=\"ctl00_Contenido_TextoBusq\" name=\"ctl00$Contenido$TextoBusq\" type=\"text\" value=\"dia\"/>\r\n",
+            "     \r\n",
+            "     \r\n",
+            "  </td>\n",
+            "<td class=\"Buscar\"><input id=\"ctl00_Contenido_Buscar\" name=\"ctl00$Contenido$Buscar\" onclick='javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(\"ctl00$Contenido$Buscar\", \"\", true, \"\", \"\", false, false))' type=\"submit\" value=\" Buscar \"/></td>\n",
+            "</tr></table>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "price=\"\"\n",
+        "nroFila=0\n",
+        "for fila in tabla.find_all(\"tr\"):  \n",
+        "  if nroFila==0:\n",
+        "    nro_Celda=0\n",
+        "    for celda in fila.find_all(\"td\"):\n",
+        "      if nro_Celda==1:\n",
+        "        name=celda.text\n",
+        "        print(\"Indice :\", name)\n",
+        "        enlace=celda.find('input')\n",
+        "        #enlace=celda.find('a')\n",
+        "        print('Valor de consulta :',enlace['value'])\n",
+        "      if nro_Celda==2:\n",
+        "        price=celda.text\n",
+        "        print(\"Valor :\",price)\n",
+        "      nro_Celda=nro_Celda+1\n",
+        "  nroFila=nroFila+1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1FrH1T3Vmpfv",
+        "outputId": "0b47834f-a735-4384-9124-a44664867479"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Indice : \n",
+            "\r\n",
+            "     \r\n",
+            "     \r\n",
+            "  \n",
+            "Valor de consulta : dia\n",
+            "Valor : \n"
+          ]
+        }
+      ]
     }
   ]
 }
