Creado mediante Colaboratory

--- a/tarea_de_scraping.ipynb
+++ b/tarea_de_scraping.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOMvGa83w/tieC2CccMPbWu",
+      "authorship_tag": "ABX9TyNzhWgwjSu30SpN5B7HzRXU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,11 +38,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "NLbsfcAZa4Aj"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 200
+        },
+        "id": "NLbsfcAZa4Aj",
+        "outputId": "ae464866-2590-4f7d-ae17-455738d53022"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-10f817d43d63>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m   \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'bolsa_valor.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcsv_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m       \u001b[0mwriter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsv_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m       \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfecha\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'fecha' is not defined"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "from bs4 import BeautifulSoup\n",
@@ -72,8 +88,8 @@
         "      nro_Celda=nro_Celda+1\n",
         "  nroFila=nroFila+1\n",
         "  with open('bolsa_valor.csv','a') as csv_file:\n",
-        "    writer=csv.writer(csv_file)\n",
-        "    writer.writerow([name, fecha, datetime.now()])"
+        "      writer=csv.writer(csv_file)\n",
+        "      writer.writerow([name, fecha, datetime.now()])"
       ]
     },
     {
@@ -92,16 +108,22 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "from bs4 import BeautifulSoup\n",
+        "import requests\n",
+        "import csv\n",
+        "from datetime import datetime\n",
+        "\n",
         "url_pag='https://www.bolsamadrid.es/esp/aspx/Empresas/BusqEmpresas.aspx?busq=dia'\n",
         "page=requests.get(url_pag).text\n",
         "soup=BeautifulSoup(page,\"lxml\")\n",
         "tabla=soup.find('table',attrs={'class':'TblPort'})\n",
-        "print(tabla)"
+        "#print(tabla)"
       ],
       "metadata": {
         "id": "SpI-BXkYpTok"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -123,18 +145,16 @@
         "        print(\"Valor :\",price)\n",
         "      nro_Celda=nro_Celda+1\n",
         "  nroFila=nroFila+1\n",
-        "  with open('busqueda.csv','a') as csv_file:\n",
-        "    writer=csv.writer(csv_file)\n",
-        "    writer.writerow([name, fecha, datetime.now()])"
+        " "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7E6QjfdOpXrO",
-        "outputId": "65c28ca6-4600-4c78-f51f-29e924e5672c"
+        "outputId": "9e875700-c7ba-4fab-c3a2-c8855eb46add"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,6 +171,19 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('busqueda.csv','a') as csv_file:\n",
+        "  writer=csv.writer(csv_file)\n",
+        "  writer.writerow([name, price, datetime.now()])"
+      ],
+      "metadata": {
+        "id": "p0lX_nT1DlKQ"
+      },
+      "execution_count": 28,
+      "outputs": []
     }
   ]
 }
