Creado mediante Colaboratory

--- a/tarea_de_scraping.ipynb
+++ b/tarea_de_scraping.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNzhWgwjSu30SpN5B7HzRXU",
+      "authorship_tag": "ABX9TyPQx48fW1x0pJMmiL6A/lV/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -38,28 +39,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 200
-        },
-        "id": "NLbsfcAZa4Aj",
-        "outputId": "ae464866-2590-4f7d-ae17-455738d53022"
+        "id": "NLbsfcAZa4Aj"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-10f817d43d63>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m   \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'bolsa_valor.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcsv_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m       \u001b[0mwriter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsv_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m       \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfecha\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'fecha' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "from bs4 import BeautifulSoup\n",
@@ -87,9 +71,9 @@
         "        print(\"Fecha :\",fecha)\n",
         "      nro_Celda=nro_Celda+1\n",
         "  nroFila=nroFila+1\n",
-        "  with open('bolsa_valor.csv','a') as csv_file:\n",
-        "      writer=csv.writer(csv_file)\n",
-        "      writer.writerow([name, fecha, datetime.now()])"
+        "  #with open('bolsa_valor.csv','a') as csv_file:\n",
+        "    #writer=csv.writer(csv_file)\n",
+        "    #writer.writerow([name, fecha, datetime.now()])"
       ]
     },
     {
@@ -123,51 +107,46 @@
       "metadata": {
         "id": "SpI-BXkYpTok"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "price=\"\"\n",
         "nroFila=0\n",
         "for fila in tabla.find_all(\"tr\"):  \n",
         "  if nroFila<=4:\n",
         "    nro_Celda=0\n",
         "    for celda in fila.find_all(\"td\"):\n",
         "      if nro_Celda==0:\n",
-        "        name=celda.text\n",
-        "        print(\"Indice :\", name)\n",
+        "        name=celda.text \n",
+        "        #print(\"Nombres :\", name)\n",
+        "        open('busqueda.csv','a') as csv_file:\n",
+        "        writer=csv.writer(csv_file)\n",
+        "        writer.writerow([name, price, datetime.now()]) \n",
         "        enlace=celda.find('a')\n",
-        "        print(enlace['href'])\n",
-        "      if nro_Celda==2:\n",
-        "        price=celda.text\n",
-        "        print(\"Valor :\",price)\n",
         "      nro_Celda=nro_Celda+1\n",
         "  nroFila=nroFila+1\n",
+        " \n",
+        "  \n",
         " "
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 131
         },
         "id": "7E6QjfdOpXrO",
-        "outputId": "9e875700-c7ba-4fab-c3a2-c8855eb46add"
+        "outputId": "cce5af62-414d-4c76-b37a-ea014daec120"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Indice : ARKADIA FINANZAS, SICAV, S.A.\n",
-            "/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0175258039&ClvEmis=75258\n",
-            "Indice : ATRESMEDIA CORP. DE MEDIOS DE COM. S.A.\n",
-            "/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0109427734&ClvEmis=09427\n",
-            "Indice : BUENDIA DE INVERSIONES, SICAV, S.A.\n",
-            "/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0115246037&ClvEmis=15246\n",
-            "Indice : CONCORDIA DE INVERS. MEDIT.(LIQUIDACION) (No cotiza)\n",
-            "/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0121171039&ClvEmis=21171\n"
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-890312d2ae2e>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    open('busqueda.csv','a') as csv_file:\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
@@ -175,15 +154,51 @@
     {
       "cell_type": "code",
       "source": [
-        "with open('busqueda.csv','a') as csv_file:\n",
-        "  writer=csv.writer(csv_file)\n",
-        "  writer.writerow([name, price, datetime.now()])"
+        "lista=[]\n",
+        "nroFila=0\n",
+        "for fila in tabla.find_all(\"tr\"):  \n",
+        "  if nroFila <=4:\n",
+        "    nro_Celda=0\n",
+        "    for celda in fila.find_all(\"td\"):\n",
+        "      if nro_Celda==0:\n",
+        "        name=celda.text\n",
+        "        lista.append (name)\n",
+        "        enlace=celda.find('a')\n",
+        "      nro_Celda=nro_Celda+1\n",
+        "  nroFila=nroFila+1\n",
+        "  \n"
       ],
       "metadata": {
-        "id": "p0lX_nT1DlKQ"
+        "id": "7rM-3eltFZK8"
       },
-      "execution_count": 28,
+      "execution_count": 124,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('tarea_scarping.csv','w',newline='\\n') as archivo:\n",
+        "    writer=csv.writer(archivo)\n",
+        "    writer.writerow(lista)\n",
+        "print(\"CSV Creado completo\")"
+      ],
+      "metadata": {
+        "id": "-YISURtQi4Tq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ad5656d0-a5e4-4b18-dfc6-c32373681f77"
+      },
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CSV Creado completo\n"
+          ]
+        }
+      ]
     }
   ]
 }
